--- a/templates/resume.html
+++ b/templates/resume.html
@@ -41,9 +41,6 @@
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="../portfolio">Portfolio</a>
                     </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="../contact">Contact</a>
-                    </li>
                     </ul>
                 </div>
             </div>
@@ -52,7 +49,7 @@
             
             <div class="aboutme" style="padding:0px">
                 <!-- <h5><strong>Resume</strong></h5><br> -->
-                <embed src="{% static "assets/documents/Resume.pdf" %}" width="100%" height="900px"/>
+                <embed src="{% static "assets/documents/Resume.pdf" %}" id='resume' width="100%" height="900px"/>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
