--- a/templates/license.html
+++ b/templates/license.html
@@ -7,19 +7,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alaric Hartsock</title>
-
-        <!-- Custom CSS-->
-        <link rel="stylesheet" type="text/css" href="{% static " css/index.css" %}">
-
-        <!--Roboto font CSS -->
-        <link href='https://fonts.googleapis.com/css2?family=Roboto&display=swap' rel='stylesheet' type='text/css'>
-
-        <!-- Bootstrap CSS-->
-        <link rel="stylesheet" href="{% static " bootstrap/css/bootstrap.min.css" %}">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-            integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
-
     </head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3457ZP4B90"></script>
@@ -101,21 +88,27 @@
           </div>
       </div>
       </div>
-      <!-- Custom JS -->
-      <script src=" {% static "js/particles.js" %}"></script>
-                            <script src="{% static " js/app.js" %}"></script>
 
-                            <!--Bootstrap JS-->
-                            <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-                                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-                                crossorigin="anonymous"></script>
-                            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-                                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-                                crossorigin="anonymous"></script>
-                            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-                                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-                                crossorigin="anonymous"></script>
-                            <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
+    <!-- Custom CSS-->
+    <link rel=" stylesheet" type="text/css" href="{% static " css/index.css" %}">
+    <!--Roboto font CSS -->
+    <link href='https://fonts.googleapis.com/css2?family=Roboto&display=swap' rel='stylesheet'
+        type='text/css'>
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="{% static " bootstrap/css/bootstrap.min.css" %}">
+    <link rel="stylesheet"
+        href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
+    <!-- Custom JS -->
+    <script src=" {% static " js/particles.js" %}"></script>
+    <script src="{% static " js/app.js" %}"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
     </body>
 
     </html>
