--- a/templates/license.html
+++ b/templates/license.html
@@ -1,114 +1,109 @@
 <DOCTYPE html>
-    {% load static %}
-    <html lang="en">
+  {% load static %}
+  <html lang="en">
 
-    <head>
-        <!-- desktop index.html -->
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alaric Hartsock</title>
-    </head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3457ZP4B90"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+  <head>
+      <!-- desktop index.html -->
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Alaric Hartsock</title>
 
-        gtag('config', 'G-3457ZP4B90');
-    </script>
+      <!-- Custom CSS-->
+      <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}">
 
-    <body style="background-color: #2e3440;">
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <a href="../" class="navbar-brand">
-                Alaric Hartsock
-            </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+      <!--Roboto font CSS -->
+      <link href='https://fonts.googleapis.com/css2?family=Roboto&display=swap' rel='stylesheet' type='text/css'>
 
-            <div class=" collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ml-auto">
-                    <ul class="navbar-nav ml-auto"></ul>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/resume">Resume</a>
-                    </li>
-                    <!-- <li class="nav-item">
+      <!-- Bootstrap CSS-->
+      <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
+
+  </head>
+
+  <body style="background-color: #2e3440;">
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
+          <a href="../" class="navbar-brand">
+              Alaric Hartsock
+          </a>
+          <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div class=" collapse navbar-collapse" id="navbarCollapse">
+              <div class="navbar-nav ml-auto">
+                  <ul class="navbar-nav ml-auto"></ul>
+                  <li class="nav-item"> 
+                      <a class="nav-link" href="../">Home</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/resume">Resume</a>
+                  </li>
+                  <!-- <li class="nav-item">
                       <a class="nav-link" href="/portfolio">Portfolio</a>
                   </li> -->
-                    </ul>
-                </div>
-            </div>
-        </nav>
+                  </ul>
+              </div>
+          </div>
+      </nav>
 
-        <div id="particles-js"></div>
+      <div id="particles-js"></div>
 
-        <div class="expand">
+      <div class="expand">
+          
+          <div class="d-flex flex-column" style="position:relative;">
+              
+              <div class="mobile-text" style="text-align: left;"><p>
+                    Copyright (c) 2022 Alaric Hartsock
+              
+              <br>All rights reserved.
 
-            <div class="d-flex flex-column" style="position:relative;">
-
-                <div class="mobile-text" style="text-align: left;">
-                    <p>
-                        Copyright (c) 2022 Alaric Hartsock
-
-                        <br>All rights reserved.
-
-                        <br><br>Redistribution and use in source and binary forms, with or without modification,
-                        are permitted provided that the following conditions are met:
-
-                        <br><br>* Redistributions of source code must retain the above copyright notice,
-                        this list of conditions and the following disclaimer.
-
-                        <br><br>* Redistributions in binary form must reproduce the above copyright
-                        notice, this list of conditions and the following disclaimer in the
-                        documentation and/or other materials provided with the distribution.
-
-                        <br><br>* Neither the name of Torchbox nor the names of its contributors may be used
-                        to endorse or promote products derived from this software without
-                        specific prior written permission.
-
-                        <br><br>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
-                        ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-                        WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-                        DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
-                        ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
-                        (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
-                        LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
-                        ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-                        (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-                        SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-                    </p>
-                </div>
-                <div id="copyright">
-                    <h6><a href="../"">Home</a></h6>
+              <br><br>Redistribution and use in source and binary forms, with or without modification,
+              are permitted provided that the following conditions are met:
+              
+              <br><br>* Redistributions of source code must retain the above copyright notice,
+                this list of conditions and the following disclaimer.
+              
+              <br><br>* Redistributions in binary form must reproduce the above copyright
+               notice, this list of conditions and the following disclaimer in the
+               documentation and/or other materials provided with the distribution.
+              
+              <br><br>* Neither the name of Torchbox nor the names of its contributors may be used
+                to endorse or promote products derived from this software without
+                specific prior written permission.
+              
+              <br><br>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+              ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+              WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+              DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
+              ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+              (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+              LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
+              ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+              (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+              SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+              </p></div>
+              <div id="copyright">
+                  <h6><a href="../"">Home</a></h6>
               </div>
           </div>
       </div>
       </div>
+      <!-- Custom JS -->
+      <script src="{% static "js/particles.js" %}"></script>
+      <script src="{% static "js/app.js" %}"></script>
 
-    <!-- Custom CSS-->
-    <link rel=" stylesheet" type="text/css" href="{% static " css/index.css" %}">
-    <!--Roboto font CSS -->
-    <link href='https://fonts.googleapis.com/css2?family=Roboto&display=swap' rel='stylesheet'
-        type='text/css'>
-    <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="{% static " bootstrap/css/bootstrap.min.css" %}">
-    <link rel="stylesheet"
-        href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
-    <!-- Custom JS -->
-    <script src=" {% static " js/particles.js" %}"></script>
-    <script src="{% static " js/app.js" %}"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
-    </body>
+      <!--Bootstrap JS-->
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+          integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+          integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+          crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+          integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+          crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
+  </body>
 
-    </html>
+  </html>
